--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6QMuMZqjfPXAQlGtQUVrR",
+      "authorship_tag": "ABX9TyO6u4ZrfF0VC4hQSrczejJc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,6 +213,18 @@
       ],
       "metadata": {
         "id": "ZxunA4_jEKjs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Conclusión\n",
+        "Este proyecto multipágina en Streamlit, desarrollado con *SymPy*, facilita la visualización de funciones matemáticas de una y dos variables en gráficos 2D y 3D. La implementación de estos gráficos ofrece una herramienta visual importante para entender el comportamiento de funciones y su relación entre variables, siendo especialmente útil en el análisis matemático y el aprendizaje de conceptos algebraicos y geométricos.\n",
+        "\n",
+        "Gracias a Streamlit y SymPy, hemos creado una plataforma interactiva que puede utilizarse en otros proyectos educativos para explorar la visualización de datos. Además, el uso de GitHub y VSCode ha permitido una colaboración efectiva y un control de versiones eficiente, esenciales en el desarrollo de proyectos en equipo.\n"
+      ],
+      "metadata": {
+        "id": "XLisFSbHFG8k"
       }
     }
   ]
